Kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: collabyouth-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: collabyouth-dev
