Kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: collabyouth-prod
spec:
  selector:
    app: backend
  type: ClusterIP  # ✅ CHANGÉ
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # ❌ nodePort: SUPPRIMÉ
